2004-02-27     Robert Chenault <robertchenault@yahoo.com>

        * cdl/net.cdl:
	* src/dhcp_prot.c: Added CYGNUM_NET_DHCP_MIN_RETRY_TIME

2004-02-17	Matt Jerdonek <maj1224@yahoo.com>

	* src/dhcp_prot.c: Fix initialization of DHCP sec field

2003-12-10  Gary Thomas  <gary@mlbassoc.com>

	* src/inet_ntoa.c: Add thread safe inet_ntoa_r() and change
	inet_ntoa() to use it.  Inspired by Matt Jerdonek.

	* include/net/netdb.h: 
	* include/arpa/inet.h: Prototype for inet_ntoa_r()

2003-11-25  Manu Sharma <manu.sharma@ascom.com>

         * tests/bridge.c: Changes to enable Spanning Tree Protocol if the
	 corresponding CDL component is enabled.
 
2003-11-24  Jani Monoses <jani@iv.ro>

	* cdl/net.cdl: Close quote for test list.
	
2003-11-22  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/net.cdl: Added control for IPSEC 
	* doc/ipsec.sgml: General documentation of ipsec.

2003-10-30  Gary Thomas  <gary@mlbassoc.com>

	* tests/ping_test.c: Enable profiling if configured in - example use only.

2003-10-16  Jay Foster  <jay@systech.com>
            Andrew Lunn <andrew.lunn@ascom.ch>
	
         * doc/tcpip.sgml: Added documentation for
         CYGOPT_NET_DHCP_OPTION_HOST_NAME, 
         CYGNUM_NET_DHCP_OPTION_HOST_NAME_LEN,
         CYGOPT_NET_DHCP_OPTION_DHCP_CLIENTID_MAC,
         CYGOPT_NET_DHCP_PARM_REQ_LIST_REPLACE and
         CYGOPT_NET_DHCP_PARM_REQ_LIST_ADDITIONAL.
         * cdl/net.cdl: Added legal_values definition for the 
         CYGNUM_NET_DHCP_OPTION_HOST_NAME_LEN option.
 
2003-10-21  Andrew Lunn  <andrew.lunn@ascom.ch>

        * src/dhcp_prot.c (set_default_dhcp_tags): 
        * src/bootp_support.c (show_bootp): Added support for TAG_NTP_SERVER

2003-10-13  Jay Foster  <jay@systech.com>

        * include/dhcp.h: Added prototype for dhcp_set_hostname().
        * src/dhcp_prot.c (set_default_dhcp_tags): Added TAG_HOST_NAME and
        TAG_DHCP_CLIENTID DHCP/BOOTP option support.
        * cdl/net.cdl: Added host name (CYGOPT_NET_DHCP_OPTION_HOST_NAME) and