@@ -1,3 +1,11 @@
+2004-04-11  Andrew Lunn  <andrew.lunn@ascom.ch>
+
+	* src/bootp_support.c: 
+	* src/dhcp_prot.c: Close sockets before exiting so we don't leak
+	them.
+	* src/dhcp_prot.c (new_lease): Use a smaller infinite so we don't get
+	a compiler warning.
+	
 2004-02-27     Robert Chenault <robertchenault@yahoo.com>
 
         * cdl/net.cdl:
